--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -102,6 +102,8 @@ $slick-cell-padding:                                        $slick-cell-padding-
 $slick-cell-selected-editable-color:                        #ffffff !default;
 $slick-cell-selected-color:                                 #dae8f1 !default;
 $slick-icon-with-text-valign:                               middle !default;
+$slick-drag-selection-handle-color:                         gray !default;
+$slick-drag-selection-handle-size:                          7px !default;
 
 /** 4x available slick-pane (top, bottom, left, right) */
 $slick-pane-top-border-top:                                 none !default;
